# yesod-angular2

./: .gitignore  README.md  stack.yaml  yesod-angular2.cabal
demo/: Application.hs  Foundation.hs  Settings.hs  demo.cabal  dev.sh  stack.yaml
demo/Handler/: Backup.hs  Home.hs
demo/Import/: NoFoundation.hs
demo/app/: devel.hs
demo/config/: keter.yml  routes  settings.yml
demo/templates/: default-layout-wrapper.hamlet
src/Language/: JS.hs
src/Yesod/: Angular2.hs
src/Yesod/Angular2/: DSL.hs  Orphans.hs  Types.hs
src/Yesod/Angular2/DSL/: Component.hs  Directive.hs
