name:                yesod-angular2
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/tolysz/yesod-angular2#readme
license:             BSD3
license-file:        LICENSE
author:              Marcin Tolysz
maintainer:          tolysz@gmail.com
copyright:           2017 Marcin Tolysz
category:            Framework
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
               Yesod.Angular2
               Yesod.Angular2.Types
               Yesod.Angular2.DSL
               Yesod.Angular2.Orphans
               Yesod.Angular2.DSL.Component

  build-depends: base >= 4.7 && < 5
               , text
               , template-haskell
               , transformers
               , mtl
               , shakespeare
               , directory
               , yesod
               , yesod-core
               , containers
               , resourcet
               , blaze-html
               , hjsmin
               , rawstring-qm
               , derive
               , data-lens
               , clay
  default-language:    Haskell2010
  default-extensions:
              TemplateHaskell
              QuasiQuotes
source-repository head
  type:     git
  location: https://github.com/tolysz/yesod-angular2
